<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_normal"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp" >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bgshaper"
            android:contentDescription="@string/album" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fommer_lrc"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="bottom|center_horizontal"
                android:text="@string/app_name"
                android:textColor="#650808"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/this_lrc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_lrc"
                android:textColor="#F91C1C"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/latter_lrc"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="top|center_horizontal"
                android:textColor="#650808"
                android:textSize="15sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/current_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black" />

        <SeekBar
            android:id="@+id/play_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="@drawable/line"
            android:max="1000" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bgitem"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_or_pause"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:text="@string/pause"
            android:textSize="16sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:onClick="getDetail"
            android:text="@string/detail"
            android:textSize="16sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:onClick="closeApplication"
            android:text="@string/quit"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:text="@string/dave"
        android:textColor="@android:color/black" />

</LinearLayout>